# informatics.msk

./: CMakeLists.txt  README.md
Binary_heap/: CMakeLists.txt
Binary_heap/Build_heap_from_array/: build_heap.cpp
Binary_heap/Hip!/: hip.cpp
Binary_heap/Minimum_in_segment/: minimum_in_segment.cpp
Binary_heap/Piramid_sorting/: input.txt  piramid_sorting.cpp
Binary_heap/Priority_queue/: input.txt  priority_queue.cpp
Binary_heap/Priority_queue_with_remove/: priority_queue_remove.cpp
Decart_tree/: CMakeLists.txt
Decart_tree/At_the_begining/: at_the_beginig.cpp
Decart_tree/Decart_tree/: decart_tree.cpp
Decart_tree/Swapper/: input.txt  swapper.cpp
DynProg/: CMakeLists.txt
DynProg/Around_table/: around_table.cpp
DynProg/Buy_tickets/: buy_tickets.cpp
DynProg/Explosion/: explosion.cpp
DynProg/Pins/: pins.cpp
DynProg/The_cheapest_way/: the_cheapest_way.cpp
DynProg/Without_three/: without_three.cpp
Graphs/Baobab/: Baobab.cpp
Graphs/Boruvka/: CMakeLists.txt
Graphs/Boruvka/Linked_set/: linked_set.cpp
Graphs/Boruvka/Minimal_karkas/: minimal_karkas.cpp  minimal_karkas_bkp.cpp  minimal_karkas_class.cpp
Graphs/Boruvka/Printed_scheme/: printed_scheme.cpp
Graphs/Boruvka/Schools/: schools.cpp
Graphs/DFS/: dfs.cpp
Graphs/Details_engine/: details.cpp
Graphs/Dijkstra_path/: dijkstra.py  dijkstra_path.cpp
Graphs/Find_loop/: find_loop.cpp  find_loop_v2.cpp  find_loops_correct.cpp
Graphs/Floyd_Ford_Bellman/Dangerous_path/: dangerous_path.cpp  test.cpp
Graphs/Floyd_Ford_Bellman/Floyd_1/: floyd.cpp
Graphs/Floyd_Ford_Bellman/Ford_Bellman/: ford_bellman.cpp
Graphs/Floyd_Ford_Bellman/Labirint/: labirint.cpp  labirint_2.cpp  labirint_3.cpp
Graphs/Floyd_Ford_Bellman/Paths_by_time/: paths_by_time.cpp  paths_by_time_bkp.cpp
Graphs/Floyd_Ford_Bellman/The_longest_path/: longest_path.cpp
Graphs/Floyd_Ford_Bellman/Transitive_closure/: transitive_closure.cpp
Graphs/Shortest_path/: Shortest_path.cpp
Graphs/Shortest_path_AB/: shortes_path_ab.cpp  shortest_path_ab_new.cpp
Graphs/Shortest_path_length/: Shortest_path_length.cpp
Graphs/Solders/: input.txt  solders.cpp  solders_bkp.cpp
Polyakov-Eremin/: CMakeLists.txt
Polyakov-Eremin/Symbol_strings_2/: CMakeLists.txt
Polyakov-Eremin/Symbol_strings_2/Blue_and_Red/: ans.c  blue_and_red.cpp  test.cpp
Polyakov-Eremin/Symbol_strings_2/Sorting_string/: input.txt  sorting_string.cpp  test.cpp
Polyakov-Eremin/Symbol_strings_2/Tumba_Yumba/: test.cpp  tumba_yumba.cpp
Polyakov-Eremin/Symbol_strings_2/Tumba_Yumba_3/: tumba_yumba_3.cpp
Polyakov-Eremin/Symol_strings/: CMakeLists.txt
Polyakov-Eremin/Symol_strings/First_word/: first_word.cpp
Polyakov-Eremin/Symol_strings/How_many_words/: how_many_words.cpp
Polyakov-Eremin/Symol_strings/Last_word/: last_word.cpp
Polyakov-Eremin/Symol_strings/Longest_word/: longest_word.cpp
RMQ/: CMakeLists.txt
RMQ/ETrain/: ETrain.cpp
RMQ/GCD/: gcd.cpp
RMQ/GCD_with_update/: gcd_with_update.cpp
RMQ/MAX_with_update/: input.txt  max_with_update.cpp
RMQ/RMQ/: input.txt  rmq.cpp
RMQ/Subsums/: input.txt  subsums.cpp  subsums_2.cpp
RMQ/Sum_on_rectangle/: sum_on_rect_bkp.cpp
RMQ/Zero_ammount_on_interval/: zero_ammount.cpp  zero_ammount_correct.cpp
