add_executable(Subsums Subsums/correct.cpp)
add_executable(Subsums_2 Subsums/subsums_2.cpp)

add_executable(SumOnRect Sum_on_rectangle/sum_on_rect.cpp)

add_executable(RMQ RMQ/rmq.cpp)
add_executable(Zero_ammount_on_interval Zero_ammount_on_interval/zero_ammount.cpp)
add_executable(ETrain ETrain/ETrain.cpp)